--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -12,7 +12,6 @@
     <link type='text/css' rel='stylesheet' href='/css/style.css' />
     <link type='text/css' rel='stylesheet' href='/css/slick.css' />
     <link type='text/css' rel='stylesheet' href='/css/animate.css' />
-    <link type='text/css' rel='stylesheet' href='/css/devices.min.css' />
     <script type="text/javascript" src="/js/three.js"></script>
     <script type="text/javascript" src="/js/ami.js"></script>
     <script type="text/javascript" src="https://cdn.rawgit.com/mrdoob/stats.js/master/build/stats.min.js"></script>
@@ -91,42 +90,11 @@
                 <div class="brand-overlay"></div>
                 <div class="title">DICOM READER</div>
                 <div class="description">The world famous medical images viewer</div>
-                <!-- <img class="brand-devices" src="/asset/devices.png" alt="devices"> -->
+                <img class="brand-devices-ipad" src="/asset/ipad.png" alt="devices">
+                <img class="brand-devices-macbook" src="/asset/macbook.png" alt="devices">
+                <img class="brand-devices-imac" src="/asset/imac.png" alt="devices">
             </div>
             <div class="brand-content">
-                <div class="device device-macbook-pro device-spacegray">
-                    <div class="device-frame">
-                        <img class="device-content" src="/asset/device-slider-1.png">
-                        <img class="device-content" src="/asset/device-slider-2.png">
-                    </div>
-                    <div class="device-stripe"></div>
-                    <div class="device-header"></div>
-                    <div class="device-sensors"></div>
-                    <div class="device-btns"></div>
-                    <div class="device-power"></div>
-                </div>
-                <div class="device device-imac-pro">
-                    <div class="device-frame">
-                        <img class="device-content" src="/asset/device-slider-1.png">
-                        <img class="device-content" src="/asset/device-slider-2.png">
-                    </div>
-                    <div class="device-stripe"></div>
-                    <div class="device-header"></div>
-                    <div class="device-sensors"></div>
-                    <div class="device-btns"></div>
-                    <div class="device-power"></div>
-                </div>
-                <div class="device device-ipad-pro device-spacegray">
-                    <div class="device-frame">
-                        <img class="device-content" src="/asset/device-slider-1.png">
-                        <img class="device-content" src="/asset/device-slider-2.png">
-                    </div>
-                    <div class="device-stripe"></div>
-                    <div class="device-header"></div>
-                    <div class="device-sensors"></div>
-                    <div class="device-btns"></div>
-                    <div class="device-power"></div>
-                </div>
                 With high performance and an intuitive interactive user interface, DiRea is the most widely used DICOM viewer in the world. It is the result of more than 15 years of research and development in digital imaging. It fully supports the DICOM standard for
                 an easy integration in your workflow environment and an open platform for development of processing tools. It offers advanced post-processing techniques in 2D and 3D, exclusive innovative technique for 3D and 4D navigation and a complete
                 integration with any PACS.
@@ -136,7 +104,6 @@
                 <div class="browsers-container">
                     <img class="logo" src="/asset/chrome.svg" alt="chrome">
                     <img class="logo" src="/asset/mozilla.svg" alt="firefox">
-                    <!-- <img class="logo" src="/asset/explorer.svg" alt="ie"> -->
                     <img class="logo" src="/asset/safari.svg" alt="safari">
                 </div>
             </div>
